[gd_scene load_steps=14 format=3 uid="uid://c4ldwr7kea5nv"]

[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_mcxyn"]
[ext_resource type="Texture2D" uid="uid://cmvn3igqf3kbf" path="res://Assets/Sprites/UISprites/WenrexaAssetsUI_SciFI/PNG/MainPanel03.png" id="2_hsp78"]
[ext_resource type="Texture2D" uid="uid://cy2y2rcwbp1t" path="res://Assets/Sprites/UISprites/Wenrexa Interface UI KIT #4/Wenrexa Interface UI KIT #4/PNG/ProgressBar_04/BarV4_Bar.png" id="3_7es0h"]
[ext_resource type="Texture2D" uid="uid://78ajgik003fl" path="res://Assets/Sprites/UISprites/Wenrexa Interface UI KIT #4/Wenrexa Interface UI KIT #4/PNG/ProgressBar_04/BarV4_ProgressBarBorder.png" id="4_xagi1"]
[ext_resource type="Texture2D" uid="uid://nd2obl3i7kqu" path="res://Assets/Sprites/UISprites/Wenrexa Interface UI KIT #4/Wenrexa Interface UI KIT #4/PNG/ProgressBar_04/BarV4_ProgressBar.png" id="5_o57d0"]
[ext_resource type="Texture2D" uid="uid://0encok2aodp5" path="res://Assets/Sprites/UISprites/Wenrexa Interface UI KIT #4/Wenrexa Interface UI KIT #4/PNG/ProgressBar_09/BarV9_Bar.png" id="6_2n0oc"]
[ext_resource type="Texture2D" uid="uid://bebvkaujqhhbj" path="res://Assets/Sprites/UISprites/Wenrexa Interface UI KIT #4/Wenrexa Interface UI KIT #4/PNG/ProgressBar_09/BarV9_ProgressBar.png" id="7_3ssn3"]
[ext_resource type="Texture2D" uid="uid://cu6csi361ua7" path="res://Assets/Sprites/UISprites/Wenrexa Interface UI KIT #4/Wenrexa Interface UI KIT #4/PNG/ProgressBar_05/BarV5_Bar.png" id="8_0vbka"]
[ext_resource type="Texture2D" uid="uid://d3e8gx1ih5ae0" path="res://Assets/Sprites/UISprites/Wenrexa Interface UI KIT #4/Wenrexa Interface UI KIT #4/PNG/ProgressBar_05/BarV5_ProgressBar.png" id="9_isxea"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_reugt"]
texture = ExtResource("2_hsp78")

[sub_resource type="AtlasTexture" id="AtlasTexture_ropc6"]
atlas = ExtResource("4_xagi1")
region = Rect2(3.15205, 3.97491, 268.971, 20.2855)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gvp4"]
atlas = ExtResource("4_xagi1")
region = Rect2(3.1721, 4.31864, 270.144, 21.9902)

[sub_resource type="AtlasTexture" id="AtlasTexture_siola"]
atlas = ExtResource("4_xagi1")
region = Rect2(3.00766, 5.28353, 271.808, 20.8193)

[node name="ui" type="CanvasLayer"]
script = ExtResource("1_mcxyn")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 98.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_reugt")

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="GridContainer" parent="Control/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Score" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Score: 9999"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="LaserCooldown" type="TextureProgressBar" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.1
value = 1.0
texture_under = ExtResource("3_7es0h")
texture_over = SubResource("AtlasTexture_ropc6")
texture_progress = ExtResource("5_o57d0")

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ShieldCooldown" type="TextureProgressBar" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
value = 100.0
texture_under = ExtResource("6_2n0oc")
texture_over = SubResource("AtlasTexture_2gvp4")
texture_progress = ExtResource("7_3ssn3")

[node name="HBoxContainer4" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HullStatus" type="TextureProgressBar" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
value = 100.0
texture_under = ExtResource("8_0vbka")
texture_over = SubResource("AtlasTexture_siola")
texture_progress = ExtResource("9_isxea")

[node name="GridContainer" type="GridContainer" parent="Control/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="HBoxContainer3" type="GridContainer" parent="Control/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
columns = 2

[node name="BombLabel" type="Label" parent="Control/PanelContainer/MarginContainer/GridContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 0
text = "Bomb:"

[node name="BombAmount" type="Label" parent="Control/PanelContainer/MarginContainer/GridContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "00"

[node name="FlareLabel" type="Label" parent="Control/PanelContainer/MarginContainer/GridContainer/HBoxContainer3"]
layout_mode = 2
text = "Flare:"

[node name="FlareAmount" type="Label" parent="Control/PanelContainer/MarginContainer/GridContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "00"

[node name="BatteryLabel" type="Label" parent="Control/PanelContainer/MarginContainer/GridContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 0
text = "Battery:"

[node name="BatteryAmount" type="Label" parent="Control/PanelContainer/MarginContainer/GridContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "00"

[node name="RepairLabel" type="Label" parent="Control/PanelContainer/MarginContainer/GridContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 0
text = "Repair:"

[node name="RepairAmount" type="Label" parent="Control/PanelContainer/MarginContainer/GridContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "00"
